--- a/baitap.css
+++ b/baitap.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('./images/background.jpg');
+    background-image: url('background.jpg');
     background-position: center;
     background-size:cover;
     width: 877px;
